--- a/example.env
+++ b/example.env
@@ -1,2 +1,3 @@
 INCLUDE_GOOGLE_SEARCH='False'
 GOOGLE_API_KEY='AIza00000000000000000000000000000000000'
+WKHTMLTOPDF_PATH='./wkhtmltox/bin/wkhtmltopdf.exe'
