added quill editor

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 INCLUDE_GOOGLE_SEARCH='False'
+ALPHA_VANTAGE_API_KEY='JZQ2ZQZQZQZQZQZQ'
 GOOGLE_API_KEY='AIza00000000000000000000000000000000000'
 WKHTMLTOPDF_PATH='./wkhtmltox/bin/wkhtmltopdf.exe'
