--- a/.github/workflows/dev_company-profile.yml
+++ b/.github/workflows/dev_company-profile.yml
@@ -28,12 +28,8 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          pip install -r requirements.txt  # Ensure dependencies, including Streamlit, are installed
       
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -80,5 +76,7 @@ jobs:
 
       - name: Start Streamlit App
         run: |
+          python -m venv venv  # Ensure virtual environment is created
           source venv/bin/activate
+          pip install -r requirements.txt  # Reinstall dependencies if needed
           streamlit run app.py --server.port 8000 --server.address 0.0.0.0
